# order-management-service

./: .env  .env.sample  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  create_tables.py  db.sqlite3  db_config.py  db_pool.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fault_tolerance.py  init_db.py  main.py  manage.py  models.py  prometheus.yml  pyproject.toml  test_db.py  test_order_flow.py  wait-for-kafka.sh
.github/workflows/: build.yml  ci.yml  ci.ymles  deploy.yml
config/: celery.py  settings.py  urls.py
handlers/: order_handler.py
kafka_utils/: consumer.py  producer.py  tasks.py
order_service/: api.py  auth.py  config.py  consumer.py  crud.py  database.py  inventory_client.py  main.py  models.py  payment_client.py  producer.py  redis_client.py  schema.py  schemas.py  user_management_client.py
orders/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
orders/management/commands/: start_order_consumer.py
orders/migrations/: 0001_initial.py  0002_ordersaga.py  0003_alter_order_status_alter_ordertracking_status.py
orders/services/: external_apis.py  order_processing.py
orders/tests/: test_orders.py  tests.py
orders/utils/: circuit_breaker.py
src/: main.py
src/database/: __init__.py  database.py
src/order_service/: __init__.py  order_service.py
src/utils/: circuit_breaker.py  fault_tolerance.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_integration.py  test_order_management.py  test_orders_integrations.py
tests/integration/: test_kafka_consumer.py  test_kafka_producer.py  test_tasks.py
